# TasksZlatopolsky

./: README.md
CppPractice/: .astylerc  .gitignore  CMakeLists.txt
CppPractice/Chapter1/: CMakeLists.txt  main.cpp
CppPractice/Chapter10/: CMakeLists.txt  main.cpp
CppPractice/Chapter11/: CMakeLists.txt  main.cpp
CppPractice/Chapter12/: CMakeLists.txt  main.cpp
CppPractice/Chapter13/: CMakeLists.txt  main.cpp
CppPractice/Chapter14/: CMakeLists.txt  main.cpp
CppPractice/Chapter15/: CMakeLists.txt  main.cpp
CppPractice/Chapter16/: CMakeLists.txt  main.cpp
CppPractice/Chapter17/: CMakeLists.txt  main.cpp
CppPractice/Chapter2/: CMakeLists.txt  main.cpp
CppPractice/Chapter3/: CMakeLists.txt  main.cpp
CppPractice/Chapter4/: CMakeLists.txt  main.cpp
CppPractice/Chapter5/: CMakeLists.txt  main.cpp
CppPractice/Chapter6/: CMakeLists.txt  main.cpp
CppPractice/Chapter7/: CMakeLists.txt  main.cpp
CppPractice/Chapter8/: CMakeLists.txt  main.cpp
CppPractice/Chapter9/: CMakeLists.txt  main.cpp
CppPractice/Task1/: CMakeLists.txt  main.cpp
CppPractice/build-Task1-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Task1.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
CppPractice/build-Task1-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
CppPractice/build-Task1-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
CppPractice/build-Task1-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/Task1_autogen/: deps
(+138 files in other folders)
